# EZCAP_QT

./: CMakeLists.txt  Config.h.in
CMakeModules/: FindLibUSB.cmake
src/main/: CMakeLists.txt
src/main/cpp/gui/: CMakeLists.txt  CameraDownloadThread.cpp  CameraDownloadThread.hpp  CyAPI.hpp  CyUSB30_def.hpp  borderLayout.cpp  delegate.cpp  main.cpp  mainMenu.cpp  qhyccdstruct.hpp
src/main/cpp/gui/ui/: about.cpp  cameraChooser.cpp  cfwControl.cpp  cfwSetup.cpp  darkFrameTool.cpp  ezCap.cpp  ezCap.hpp  favorite.cpp  fitHeader.cpp  managementMenu.cpp  phdLink.cpp  phdLink.hpp  planner.cpp  readmode.cpp  tempControl.cpp
src/main/cpp/lib/: CMakeLists.txt  CyAPI.hpp  CyUSB30_def.hpp  disktools.cpp  dllqhyccd.cpp  dllqhyccd.hpp  downloadCapThread.cpp  downloadFocThread.cpp  downloadPreThread.cpp  qhyccdstruct.hpp
src/main/resources/: resources.qrc
src/main/resources/qss/: style.qss
